{
    "name": "FarmingGameControls",
    "maps": [
        {
            "name": "GameplayActionMap",
            "id": "76467d94-954c-4d78-a633-071b47c07bb7",
            "actions": [
                {
                    "name": "MovementVector",
                    "type": "Value",
                    "id": "876fbc67-5f89-4435-96a6-0c2bcc2a32fa",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b63f85c5-47e5-42be-bdd4-8de3e335a4b1",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "a4d41eb8-68c7-47a0-a444-df5863510a50",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eb2d6e62-2557-40a3-b624-de5966c000c6",
                    "path": "<Keyboard>/W",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7aec2736-41de-4840-b795-b51ee8939e4a",
                    "path": "<Keyboard>/S",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fa2bb233-a3e3-474e-9c9a-b6065edaead4",
                    "path": "<Keyboard>/A",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2a7011da-020a-4dec-a7b1-76661037ffdd",
                    "path": "<Keyboard>/D",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}